--- a/booking.html
+++ b/booking.html
@@ -89,6 +89,11 @@
                     <hr class="small">
 
                     <font size="3" color="red">If you are booking from a mobile platform, you need to install <b> Google Sheet APP</b> to be able to edit!!</font>
+                    <br>
+                    <br>
+                    <font size="3" color="red">Your e-mail will be stored in the system up to 8 months before permanently deleted. </font>
+                    
+                    
                     <div class="row">
                         <div class="col-sm-4">
                             <div class="portfolio-item">
