--- a/tutorial.html
+++ b/tutorial.html
@@ -428,7 +428,7 @@
 
                         <div class="col-sm-2">
                             <div class="portfolio-item">
-                                <a href="./tutorials/vinylCutter/Punktlektion%20Vinyl%20rev01.5.pdf">
+                                <a href="./tutorials/vinylCutter/GRAPHTECH%20VINYL%20CUTTER%20-%20Punktlektion.pdf">
                                     <img class="img-portfolio img-responsive" src="img/tutorial/vinyl-01.png">
                                 </a>
                                 <p>Punktlektion Vinyl Cutting</p>
