--- a/machinePage_Sticker.html
+++ b/machinePage_Sticker.html
@@ -60,30 +60,29 @@
         </header>
 
         <!-- SHORT FACTS -->
-        <section class="pt120 pb-30">
-        <div class=" generic-banner pt20 pb-50">
+        <div class="banner-area generic-banner">
             <div class="container">
 
                 <div class="row justify-content-center generic-height align-items-center">
-                    <div class="col-lg-5">
+                    <div class="col-lg-6">
                         <div class=" text-left">
-                            <img class="d-block mx-auto img-fluid" src="img/Machines/Lasercutter.png" alt="">
+                            <img class="d-block mx-auto img-fluid" src="img/Machines/Roland-BN203.png" alt="">
                             
 
                         </div>
                     </div>
 
-                    <div class="col-lg-5">
+                    <div class="col-lg-4">
 
 
                         <div class="banner-content text-right">
                             <span class="text-white top text-uppercase">KEA Makerlab </span>
-                            <h1 class="text-white text-uppercase">Laser Cutter</h1>
+                            <h1 class="text-white text-uppercase">Sticker Printer</h1>
                             <ul>
-                                <li> <i class="fa fa-square-o fa-fw fa-1x"></i> Work Area: 120cm x 60 cm </li>
-                                <li> <i class="fa fa-file fa-fw fa-1x"></i> File Format: .ai, .dxf .svg </li>
+                                <li> <i class="fa fa-square-o fa-fw fa-1x"></i> Max print/cut width: 450mm  </li>
+                                <li> <i class="fa fa-file fa-fw fa-1x"></i> File Format: .eps (.ai) </li>
                                 <li> <i class="fa fa-list-alt fa-fw fa-1x"></i> Software Adobe Illustrator </li>
-                                <li> <a href="https://www.ulsinc.com/material/materials-library"><i class="fa fa-cut fa-fw fa-1x"></i> Materials</a> </li>
+                                <li> <i class="fa fa-cut fa-fw fa-1x"></i> Materials: Vinyl (mat, glossy, transparent) Heat transfer. </li>
                             </ul>
 
                         </div>
@@ -92,7 +91,6 @@
                 </div>
             </div>
         </div>
-        </section>
 
         <!-- VIDEO -->
         <section class="about-area  pb-30">
@@ -235,7 +233,7 @@
                     </div>
                     <div class="col-md-4">
                         <a href="img/Lasercutter/lampe2.jpg" class="img-pop-up">
-                            <div class="single-gallery-image" style="background: url(img/Lasercutter/lampe2.jpg);"></div>  
+                            <div class="single-gallery-image" style="background: url(img/lasercutter/lampe_thmb.jpg);"></div>  
                         </a>
                     </div>
                 </div>
