--- a/machinePage_3DPrint_Ultimaker.html
+++ b/machinePage_3DPrint_Ultimaker.html
@@ -60,12 +60,11 @@
         </header>
 
         <!-- SHORT FACTS -->
-        <section class="pt120 pb-30">
-        <div class=" generic-banner pt20 pb-50">
+        <div class="banner-area generic-banner">
             <div class="container">
 
                 <div class="row justify-content-center generic-height align-items-center">
-                    <div class="col-lg-5">
+                    <div class="col-lg-4">
                         <div class=" text-left">
                             <img class="d-block mx-auto img-fluid" src="img/Machines/Lasercutter.png" alt="">
                             
@@ -73,7 +72,7 @@
                         </div>
                     </div>
 
-                    <div class="col-lg-5">
+                    <div class="col-lg-6">
 
 
                         <div class="banner-content text-right">
@@ -92,7 +91,6 @@
                 </div>
             </div>
         </div>
-        </section>
 
         <!-- VIDEO -->
         <section class="about-area  pb-30">
@@ -235,7 +233,7 @@
                     </div>
                     <div class="col-md-4">
                         <a href="img/Lasercutter/lampe2.jpg" class="img-pop-up">
-                            <div class="single-gallery-image" style="background: url(img/Lasercutter/lampe2.jpg);"></div>  
+                            <div class="single-gallery-image" style="background: url(img/lasercutter/lampe_thmb.jpg);"></div>  
                         </a>
                     </div>
                 </div>
