connected the tutorial videos

--- a/machinePage_Sticker.html
+++ b/machinePage_Sticker.html
@@ -84,7 +84,7 @@
                             <ul>
                                 <li> <i class="fa fa-square-o fa-fw fa-1x"></i> Max cut width: 450mm </li>
                                 <li> <i class="fa fa-file fa-fw fa-1x"></i> File Format: .eps (.ai) </li>
-                                <li> <i class="fa fa-list-alt fa-fw fa-1x"></i> Software Roland VersaWorks </li>
+                                <li> <i class="fa fa-list-alt fa-fw fa-1x"></i> Software: Adobe Illustrator </li>
                                 <li> <i class="fa fa-cut fa-fw fa-1x"></i> Materials: Vinyl, (white, transparent, heat transfer)  </li>
                             </ul>
 
@@ -110,7 +110,7 @@
             <div class="container">
 
                 <div class="embed-responsive embed-responsive-16by9">
-                    <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/w2AZItDr0qY" allowfullscreen=""></iframe>
+                    <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/wIHCnZBx48s" allowfullscreen=""></iframe>
                 </div>
 
             </div>
