--- a/machinePage_Vinyl.html
+++ b/machinePage_Vinyl.html
@@ -110,7 +110,7 @@
             <div class="container">
 
                 <div class="embed-responsive embed-responsive-16by9">
-                    <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/w2AZItDr0qY" allowfullscreen=""></iframe>
+                    <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/HkLn_Jo-lCk" allowfullscreen=""></iframe>
                 </div>
 
             </div>
