Sticker and vinyl images + added links to asset page

--- a/machinePage_Sticker.html
+++ b/machinePage_Sticker.html
@@ -201,43 +201,43 @@
                 </div>
                 <div class="row gallery-item">
                     <div class="col-md-4 ">
-                        <a href="img/Lasercutter/lampe3.jpg" class="img-pop-up">
-                            <div class="single-gallery-image" style="background: url(img/Lasercutter/lampe3.jpg);"></div>
+                        <a href="img/Sticker/statue.jpg" class="img-pop-up">
+                            <div class="single-gallery-image" style="background: url(img/Sticker/statue.jpg);"></div>
                         </a>
                     </div>
                     <div class="col-md-4">
-                        <a href="img/Lasercutter/huse.png" class="img-pop-up">
-                            <div class="single-gallery-image" style="background: url(img/Lasercutter/huse.png);"></div>
+                        <a href="img/Sticker/phone.jpg" class="img-pop-up">
+                            <div class="single-gallery-image" style="background: url(img/Sticker/phone.jpg);"></div>
                         </a>
                     </div>
                     <div class="col-md-4">
-                        <a href="img/Lasercutter/Kasse.jpg" class="img-pop-up">
-                            <div class="single-gallery-image" style="background: url(img/Lasercutter/Kasse.jpg);"></div>
+                        <a href="img/Sticker/mangestickers.jpg" class="img-pop-up">
+                            <div class="single-gallery-image" style="background: url(img/Sticker/mangestickers.jpg);"></div>
                         </a>
                     </div>
                     <div class="col-md-6">
-                        <a href="img/Lasercutter/H%C3%A6ngetingest.jpg" class="img-pop-up">
-                            <div class="single-gallery-image" style="background: url(img/Lasercutter/H%C3%A6ngetingest.jpg);"></div>
+                        <a href="img/Sticker/street3.jpg" class="img-pop-up">
+                            <div class="single-gallery-image" style="background: url(img/Sticker/street3.jpg);"></div>
                         </a>
                     </div>
                     <div class="col-md-6">
-                        <a href="img/Lasercutter/bygning3.jpg" class="img-pop-up">
-                            <div class="single-gallery-image" style="background: url(img/Lasercutter/bygning3.jpg);"></div>
+                        <a href="img/Sticker/computer.jpg" class="img-pop-up">
+                            <div class="single-gallery-image" style="background: url(img/Sticker/computer.jpg);"></div>
                         </a>
                     </div>
                     <div class="col-md-4">
-                        <a href="img/Lasercutter/bygning4.jpg" class="img-pop-up">
-                            <div class="single-gallery-image" style="background: url(img/Lasercutter/bygning4.jpg);"></div>
+                        <a href="img/Sticker/warning.jpg" class="img-pop-up">
+                            <div class="single-gallery-image" style="background: url(img/Sticker/warning.jpg);"></div>
                         </a>
                     </div>
                     <div class="col-md-4">
-                        <a href="img/Lasercutter/blomst.jpg" class="img-pop-up">
-                            <div class="single-gallery-image" style="background: url(img/Lasercutter/blomst.jpg);"></div>
+                        <a href="img/Sticker/skov.jpg" class="img-pop-up">
+                            <div class="single-gallery-image" style="background: url(img/Sticker/skov.jpg);"></div>
                         </a>
                     </div>
                     <div class="col-md-4">
-                        <a href="img/Lasercutter/lampe2.jpg" class="img-pop-up">
-                            <div class="single-gallery-image" style="background: url(img/lasercutter/lampe_thmb.jpg);"></div>  
+                        <a href="img/Sticker/alien.jpg" class="img-pop-up">
+                            <div class="single-gallery-image" style="background: url(img/Sticker/alien.jpg);"></div>
                         </a>
                     </div>
                 </div>
