--- a/machinePage_Textile.html
+++ b/machinePage_Textile.html
@@ -66,7 +66,7 @@
                 <div class="row justify-content-center generic-height align-items-center">
                     <div class="col-lg-4">
                         <div class=" text-left">
-                            <img class="d-block mx-auto img-fluid" src="img/Machines/Lasercutter.png" alt="">
+                            <img class="d-block mx-auto img-fluid" src="img/Machines/mimaki-tx2-1600.jpg" alt="">
                             
 
                         </div>
@@ -77,11 +77,11 @@
 
                         <div class="banner-content text-right">
                             <span class="text-white top text-uppercase">KEA Makerlab </span>
-                            <h1 class="text-white text-uppercase">Laser Cutter</h1>
+                            <h1 class="text-white text-uppercase">Textile Printer</h1>
                             <ul>
                                 <li> <i class="fa fa-square-o fa-fw fa-1x"></i> Work Area: 120cm x 60 cm </li>
-                                <li> <i class="fa fa-file fa-fw fa-1x"></i> File Format: .ai, .dxf .svg </li>
-                                <li> <i class="fa fa-list-alt fa-fw fa-1x"></i> Software Adobe Illustrator </li>
+                                <li> <i class="fa fa-file fa-fw fa-1x"></i> File Format: .tiff, 180 DPI </li>
+                                <li> <i class="fa fa-list-alt fa-fw fa-1x"></i> Software  </li>
                                 <li> <a href="https://www.ulsinc.com/material/materials-library"><i class="fa fa-cut fa-fw fa-1x"></i> Materials</a> </li>
                             </ul>
 
