--- a/machinePage_3DPrint_Gips.html
+++ b/machinePage_3DPrint_Gips.html
@@ -66,7 +66,7 @@
                 <div class="row justify-content-center generic-height align-items-center">
                     <div class="col-lg-4">
                         <div class=" text-left">
-                            <img class="d-block mx-auto img-fluid" src="img/Machines/Lasercutter.png" alt="">
+                            <img class="d-block mx-auto img-fluid" src="img/Machines/Z450Printer.jpg" alt="">
                             
 
                         </div>
@@ -77,7 +77,7 @@
 
                         <div class="banner-content text-right">
                             <span class="text-white top text-uppercase">KEA Makerlab </span>
-                            <h1 class="text-white text-uppercase">Laser Cutter</h1>
+                            <h1 class="text-white text-uppercase">3D Printer </h1>
                             <ul>
                                 <li> <i class="fa fa-square-o fa-fw fa-1x"></i> Work Area: 120cm x 60 cm </li>
                                 <li> <i class="fa fa-file fa-fw fa-1x"></i> File Format: .ai, .dxf .svg </li>
