fixed vinyl and sticker errors

--- a/machinePage_Vinyl.html
+++ b/machinePage_Vinyl.html
@@ -145,7 +145,7 @@
                             <h2 class="text-uppercase">Vinyl Cut Template File</h2>
 
                             <p>
-                                Illustrator file with artboard with the size of the laser bed. Includes also grafic styles for easy setup of Cuting Vector engracing and Raster engraving.
+                                 Illustrator file with artboard set to the max width of vinyl cutter.
                             </p>
 
 
