--- a/machinePage_Laser.html
+++ b/machinePage_Laser.html
@@ -170,7 +170,7 @@
                             <br>
                             <a class="text-uppercase view-details" href="https://kea-makerlab.github.io/hello/assets/ucpinst-5.38.57.95.zip">Download</a>
                             <h2 class="text-uppercase">Laser Cut Driver</h2>
-                            <p>Download and install on your own machine. You wont connect to the laser but you can se how long your Cut/engraving jub will take.</p>
+                            <p>Download and install on your own machine (PC only). You wont connect to the laser but you can se how long your Cut/engraving job will take.</p>
                             
                         </div>
                     </div>
