Fixed download file sticker added video tutorials links

--- a/machinePage_Sticker.html
+++ b/machinePage_Sticker.html
@@ -170,7 +170,7 @@
                         <img class="d-block mx-auto img-fluid" src="img/downloadSoftware.png" alt="">
                         <div class="desc">
                             <br>
-                            <a class="text-uppercase view-details" href="https://kea-makerlab.github.io/hello/assets/ucpinst-5.38.57.95.zip">Download</a>
+                            <a class="text-uppercase view-details" href="./assets/Roland_BN20.zip">Download</a>
                             <h2 class="text-uppercase">Swatch Library for Illustrator.</h2>
                             <p>Swatch library used to define cut lines and also define white under print on transparent vinyl. Download and copy files to following folder on your own computer:
                                 <br>
