Fixed 3D print foro and margins

--- a/machinePage_3DPrint_Ultimaker.html
+++ b/machinePage_3DPrint_Ultimaker.html
@@ -60,7 +60,8 @@
         </header>
 
         <!-- SHORT FACTS -->
-        <div class="banner-area generic-banner">
+        <section class="pt120 pb-30">
+        <div class=" generic-banner pt20 pb-50">
             <div class="container">
 
                 <div class="row justify-content-center generic-height align-items-center">
@@ -72,7 +73,7 @@
                         </div>
                     </div>
 
-                    <div class="col-lg-6">
+                    <div class="col-lg-5">
 
 
                         <div class="banner-content text-right">
@@ -92,6 +93,7 @@
                 </div>
             </div>
         </div>
+        </section>
 
         <!-- VIDEO -->
         <section class="about-area  pb-30">
