more images to machine page

--- a/machinePage_3DPrint_Ultimaker.html
+++ b/machinePage_3DPrint_Ultimaker.html
@@ -200,49 +200,50 @@
                 </div>
                 <div class="row gallery-item">
                     <div class="col-md-4 ">
-                        <a href="img/Lasercutter/lampe3.jpg" class="img-pop-up">
-                            <div class="single-gallery-image" style="background: url(img/Lasercutter/lampe3.jpg);"></div>
+                        <a href="img/3Dprint/hus2.jpg" class="img-pop-up">
+                            <div class="single-gallery-image" style="background: url(img/3Dprint/hus2.jpg);"></div>
                         </a>
                     </div>
                     <div class="col-md-4">
-                        <a href="img/Lasercutter/huse.png" class="img-pop-up">
-                            <div class="single-gallery-image" style="background: url(img/Lasercutter/huse.png);"></div>
+                        <a href="img/3Dprint/sort.jpg" class="img-pop-up">
+                            <div class="single-gallery-image" style="background: url(img/3Dprint/sort.jpg);"></div>
                         </a>
                     </div>
                     <div class="col-md-4">
-                        <a href="img/Lasercutter/Kasse.jpg" class="img-pop-up">
-                            <div class="single-gallery-image" style="background: url(img/Lasercutter/Kasse.jpg);"></div>
+                        <a href="img/3Dprint/elefant.jpg" class="img-pop-up">
+                            <div class="single-gallery-image" style="background: url(img/3Dprint/elefant.jpg);"></div>
                         </a>
                     </div>
                     <div class="col-md-6">
-                        <a href="img/Lasercutter/H%C3%A6ngetingest.jpg" class="img-pop-up">
-                            <div class="single-gallery-image" style="background: url(img/Lasercutter/H%C3%A6ngetingest.jpg);"></div>
+                        <a href="img/3Dprint/landskab.jpg" class="img-pop-up">
+                            <div class="single-gallery-image" style="background: url(img/3Dprint/landskab.jpg);"></div>
                         </a>
                     </div>
                     <div class="col-md-6">
-                        <a href="img/Lasercutter/bygning3.jpg" class="img-pop-up">
-                            <div class="single-gallery-image" style="background: url(img/Lasercutter/bygning3.jpg);"></div>
+                        <a href="img/3Dprint/hus.jpg" class="img-pop-up">
+                            <div class="single-gallery-image" style="background: url(img/3Dprint/hus.jpg);"></div>
                         </a>
                     </div>
                     <div class="col-md-4">
-                        <a href="img/Lasercutter/bygning4.jpg" class="img-pop-up">
-                            <div class="single-gallery-image" style="background: url(img/Lasercutter/bygning4.jpg);"></div>
+                        <a href="img/3Dprint/vase.jpg" class="img-pop-up">
+                            <div class="single-gallery-image" style="background: url(img/3Dprint/vase.jpg);"></div>
                         </a>
                     </div>
                     <div class="col-md-4">
-                        <a href="img/Lasercutter/blomst.jpg" class="img-pop-up">
-                            <div class="single-gallery-image" style="background: url(img/Lasercutter/blomst.jpg);"></div>
+                        <a href="img/3Dprint/holder.jpg" class="img-pop-up">
+                            <div class="single-gallery-image" style="background: url(img/3Dprint/holder.jpg);"></div>
                         </a>
                     </div>
                     <div class="col-md-4">
-                        <a href="img/Lasercutter/lampe2.jpg" class="img-pop-up">
-                            <div class="single-gallery-image" style="background: url(img/lasercutter/lampe_thmb.jpg);"></div>  
+                        <a href="img/3Dprint/cykel.jpg" class="img-pop-up">
+                            <div class="single-gallery-image" style="background: url(img/3Dprint/cykel.jpg);"></div>
                         </a>
                     </div>
                 </div>
             </div>
          </div>
         </section>
+
 
         <!-- End Subscription Area -->
         <!-- Start Footer Widget Area -->
