--- a/machinePage_Textile.html
+++ b/machinePage_Textile.html
@@ -60,29 +60,32 @@
         </header>
 
         <!-- SHORT FACTS -->
-        <div class="banner-area generic-banner">
+        <section class="pt120 pb-30">
+        <div class=" generic-banner pt20 pb-50">
             <div class="container">
 
                 <div class="row justify-content-center generic-height align-items-center">
-                    <div class="col-lg-4">
+                    <div class="col-lg-5">
                         <div class=" text-left">
-                            <img class="d-block mx-auto img-fluid" src="img/Machines/mimaki-tx2-1600.jpg" alt="">
+                            <img class="d-block mx-auto img-fluid" src="img/Machines/mimaki.png" alt="">
                             
 
                         </div>
                     </div>
 
-                    <div class="col-lg-6">
+                    <div class="col-lg-5">
 
 
                         <div class="banner-content text-right">
                             <span class="text-white top text-uppercase">KEA Makerlab </span>
                             <h1 class="text-white text-uppercase">Textile Printer</h1>
                             <ul>
-                                <li> <i class="fa fa-square-o fa-fw fa-1x"></i> Work Area: 120cm x 60 cm </li>
+                                <li> <i class="fa fa-square-o fa-fw fa-1x"></i> Max Print Width: 140cm </li>
                                 <li> <i class="fa fa-file fa-fw fa-1x"></i> File Format: .tiff, 180 DPI </li>
-                                <li> <i class="fa fa-list-alt fa-fw fa-1x"></i> Software  </li>
-                                <li> <a href="https://www.ulsinc.com/material/materials-library"><i class="fa fa-cut fa-fw fa-1x"></i> Materials</a> </li>
+                                <li> <i class="fa fa-list-alt fa-fw fa-1x"></i> Software: TexPrint </li>
+                                <li> <i class="fa fa-cut fa-fw fa-1x"></i> Materials:  Various Cotton* and Silk* <br><br> <i>*Fabric have to be bought in KEA POP UP Store as they are pre-coated with chemical for the printer process to work.</i>
+
+</li>
                             </ul>
 
                         </div>
@@ -91,6 +94,7 @@
                 </div>
             </div>
         </div>
+        </section>
 
         <!-- VIDEO -->
         <section class="about-area  pb-30">
@@ -197,43 +201,43 @@
                 </div>
                 <div class="row gallery-item">
                     <div class="col-md-4 ">
-                        <a href="img/Lasercutter/lampe3.jpg" class="img-pop-up">
-                            <div class="single-gallery-image" style="background: url(img/Lasercutter/lampe3.jpg);"></div>
+                        <a href="img/textileprint/blomster.jpg" class="img-pop-up">
+                            <div class="single-gallery-image" style="background: url(img/textileprint/blomster.jpg);"></div>
                         </a>
                     </div>
                     <div class="col-md-4">
-                        <a href="img/Lasercutter/huse.png" class="img-pop-up">
-                            <div class="single-gallery-image" style="background: url(img/Lasercutter/huse.png);"></div>
+                        <a href="img/textileprint/orange.jpg" class="img-pop-up">
+                            <div class="single-gallery-image" style="background: url(img/textileprint/orange.jpg);"></div>
                         </a>
                     </div>
                     <div class="col-md-4">
-                        <a href="img/Lasercutter/Kasse.jpg" class="img-pop-up">
-                            <div class="single-gallery-image" style="background: url(img/Lasercutter/Kasse.jpg);"></div>
+                        <a href="img/textileprint/blomster3.jpg" class="img-pop-up">
+                            <div class="single-gallery-image" style="background: url(img/textileprint/blomster3.jpg);"></div>
                         </a>
                     </div>
                     <div class="col-md-6">
-                        <a href="img/Lasercutter/H%C3%A6ngetingest.jpg" class="img-pop-up">
-                            <div class="single-gallery-image" style="background: url(img/Lasercutter/H%C3%A6ngetingest.jpg);"></div>
+                        <a href="img/textileprint/blandet2.jpg" class="img-pop-up">
+                            <div class="single-gallery-image" style="background: url(img/textileprint/blandet2.jpg);"></div>
                         </a>
                     </div>
                     <div class="col-md-6">
-                        <a href="img/Lasercutter/bygning3.jpg" class="img-pop-up">
-                            <div class="single-gallery-image" style="background: url(img/Lasercutter/bygning3.jpg);"></div>
+                        <a href="img/textileprint/blandet.jpg" class="img-pop-up">
+                            <div class="single-gallery-image" style="background: url(img/textileprint/blandet.jpg);"></div>
                         </a>
                     </div>
                     <div class="col-md-4">
-                        <a href="img/Lasercutter/bygning4.jpg" class="img-pop-up">
-                            <div class="single-gallery-image" style="background: url(img/Lasercutter/bygning4.jpg);"></div>
+                        <a href="img/textileprint/blomster2.jpg" class="img-pop-up">
+                            <div class="single-gallery-image" style="background: url(img/textileprint/blomster2.jpg);"></div>
                         </a>
                     </div>
                     <div class="col-md-4">
-                        <a href="img/Lasercutter/blomst.jpg" class="img-pop-up">
-                            <div class="single-gallery-image" style="background: url(img/Lasercutter/blomst.jpg);"></div>
+                        <a href="img/textileprint/mix.jpg" class="img-pop-up">
+                            <div class="single-gallery-image" style="background: url(img/textileprint/mix.jpg);"></div>
                         </a>
                     </div>
                     <div class="col-md-4">
-                        <a href="img/Lasercutter/lampe2.jpg" class="img-pop-up">
-                            <div class="single-gallery-image" style="background: url(img/lasercutter/lampe_thmb.jpg);"></div>  
+                        <a href="img/textileprint/blaat.jpg" class="img-pop-up">
+                            <div class="single-gallery-image" style="background: url(img/textileprint/blaat.jpg);"></div>
                         </a>
                     </div>
                 </div>
