--- a/machinePage_3DPrint_Ultimaker.html
+++ b/machinePage_3DPrint_Ultimaker.html
@@ -187,7 +187,26 @@
         </section>
         <!-- End secvice Area -->
 
+ <!-- VIDEO FEED -->
+        <section class="about-area  pb-30">
+            <div class="container">
+                <div class="row align-items-center justify-content-between">
+                    <div class="col-lg-6 col-md-12 col-sm-12 about-left pt-30 pb-30">
+                        <h1 class="text-uppercase">
+                            <span>Video Feed</span>
+                        </h1>
+                    </div>
+                </div>
+            </div>
+            <div class="container">
 
+                <div class="embed-responsive embed-responsive-16by9">
+                    <iframe class="embed-responsive-item" src="http://makerlab.kea.dk:44456/all.html" allowfullscreen=""></iframe>
+                </div>
+
+            </div>
+        </section>
+        <!-- End Video Feed -->
         <section>
         <div class="container">
             <div class="section-top-border">
