--- a/signup.html
+++ b/signup.html
@@ -108,7 +108,7 @@
                         <!-- Laser Cutting Fundamental  -->
                         <div class="col-sm-3">
                             <div class="portfolio-item">
-                                <a href="https://docs.google.com/spreadsheets/d/1kavphcetpQqmf0qFFeAy4nQ3SzR8LMQ-g8HaLbZVYyQ/edit#gid=0">
+                                <a href="https://kea.safeticket.dk/">
                                     <img class="img-portfolio img-responsive" src="img/signUp_LaserFundamentals.png">
                                 </a>
                             </div>
@@ -116,7 +116,7 @@
                         <!-- 3D Printing Fundamentals -->
                         <div class="col-sm-3">
                             <div class="portfolio-item">
-                                <a href="https://docs.google.com/spreadsheets/d/1kavphcetpQqmf0qFFeAy4nQ3SzR8LMQ-g8HaLbZVYyQ/edit#gid=705965312">
+                                <a href="https://kea.safeticket.dk/">
                                     <img class="img-portfolio img-responsive" src="img/signUp_3DFundamentals.png">
                                 </a>
                             </div>
@@ -124,7 +124,7 @@
                         <!-- Textile Printing Fundamentals -->
                         <div class="col-sm-3">
                             <div class="portfolio-item">
-                                <a href="https://docs.google.com/spreadsheets/d/1kavphcetpQqmf0qFFeAy4nQ3SzR8LMQ-g8HaLbZVYyQ/edit#gid=1059458461">
+                                <a href="https://kea.safeticket.dk/">
                                     <img class="img-portfolio img-responsive" src="img/signUp_TextileFundamentals.png">
                                 </a>
                             </div>
@@ -133,7 +133,7 @@
                         <!-- CNC Fundamentals -->
                         <div class="col-sm-3">
                             <div class="portfolio-item">
-                                <a href="https://docs.google.com/spreadsheets/d/1kavphcetpQqmf0qFFeAy4nQ3SzR8LMQ-g8HaLbZVYyQ/edit#gid=2050681332">
+                                <a href="https://kea.safeticket.dk/">
                                     <img class="img-portfolio img-responsive" src="img/signUp_CNCFundamentals.png">
                                 </a>
                             </div>
