Machine pages update, Textile Tshirt
Machine pages update, Textile Tshirt

--- a/assets.html
+++ b/assets.html
@@ -239,7 +239,7 @@
                     <div class="row">
                         <div class="col-md-12">
                             <div class="portfolio-item">
-                                <p><a href="./assets/allefarverCMYK.tiff">CMYK Color Templat.</a></p>
+                                <p><a href="./assets/allefarverCMYK.tiff">CMYK Color Template.</a></p>
 
                             </div>
                         </div>
