--- a/machinePage_3DPrint_Gips.html
+++ b/machinePage_3DPrint_Gips.html
@@ -103,6 +103,8 @@
                     </div>
                 </div>
             </div>
+            
+              <!-- SHORT FACTS -->
             <div class="container">
 
                 <div class="embed-responsive embed-responsive-16by9">
