acrylic bending page

--- a/assets.html
+++ b/assets.html
@@ -140,6 +140,11 @@
                                     <p>Machine Page 3D Printer Gipsr</p>
                                 </a>
                             </div>
+                            <div class="portfolio-item">
+                                <a href="machinePage_AcrylicBending.html">
+                                    <p>Machine Page Acrylic Bending</p>
+                                </a>
+                            </div>
                         </div>
 
                         <div class="col-md-4">
