Updated Machine pages

--- a/assets.html
+++ b/assets.html
@@ -145,6 +145,16 @@
                                     <p>Machine Page Acrylic Bending</p>
                                 </a>
                             </div>
+                            <div class="portfolio-item">
+                                <a href="machinePage_VacuumPress.html">
+                                    <p>Machine Page Vacuum Press</p>
+                                </a>
+                            </div>
+                            <div class="portfolio-item">
+                                <a href="machinePage_CNC.html">
+                                    <p>Machine Page CNC</p>
+                                </a>
+                            </div>
                         </div>
 
                         <div class="col-md-4">
