--- a/machinePage_AcrylicBending.html
+++ b/machinePage_AcrylicBending.html
@@ -130,43 +130,43 @@
                 </div>
                 <div class="row gallery-item">
                     <div class="col-md-4 ">
-                        <a href="img/Sticker/statue.jpg" class="img-pop-up">
-                            <div class="single-gallery-image" style="background: url(img/Sticker/statue.jpg);"></div>
+                        <a href="img/Acryllicbending/lampeholder.jpg" class="img-pop-up">
+                            <div class="single-gallery-image" style="background: url(img/Acryllicbending/lampeholder.jpg);"></div>
                         </a>
                     </div>
                     <div class="col-md-4">
-                        <a href="img/Sticker/phone.jpg" class="img-pop-up">
-                            <div class="single-gallery-image" style="background: url(img/Sticker/phone.jpg);"></div>
+                        <a href="img/Acryllicbending/komode.jpg" class="img-pop-up">
+                            <div class="single-gallery-image" style="background: url(img/Acryllicbending/komode.jpg);"></div>
                         </a>
                     </div>
                     <div class="col-md-4">
-                        <a href="img/Sticker/mangestickers.jpg" class="img-pop-up">
-                            <div class="single-gallery-image" style="background: url(img/Sticker/mangestickers.jpg);"></div>
+                        <a href="img/Acryllicbending/natbord.jpg" class="img-pop-up">
+                            <div class="single-gallery-image" style="background: url(img/Acryllicbending/natbord.jpg);"></div>
                         </a>
                     </div>
                     <div class="col-md-6">
-                        <a href="img/Sticker/street3.jpg" class="img-pop-up">
-                            <div class="single-gallery-image" style="background: url(img/Sticker/street3.jpg);"></div>
+                        <a href="img/Acryllicbending/rullebord.jpg" class="img-pop-up">
+                            <div class="single-gallery-image" style="background: url(img/Acryllicbending/rullebord.jpg);"></div>
                         </a>
                     </div>
                     <div class="col-md-6">
-                        <a href="img/Sticker/computer.jpg" class="img-pop-up">
-                            <div class="single-gallery-image" style="background: url(img/Sticker/computer.jpg);"></div>
+                        <a href="img/Acryllicbending/vin.jpg" class="img-pop-up">
+                            <div class="single-gallery-image" style="background: url(img/Acryllicbending/vin.jpg);"></div>
                         </a>
                     </div>
                     <div class="col-md-4">
-                        <a href="img/Sticker/warning.jpg" class="img-pop-up">
-                            <div class="single-gallery-image" style="background: url(img/Sticker/warning.jpg);"></div>
+                        <a href="img/Acryllicbending/lampe.jpg" class="img-pop-up">
+                            <div class="single-gallery-image" style="background: url(img/Acryllicbending/lampe.jpg);"></div>
                         </a>
                     </div>
                     <div class="col-md-4">
-                        <a href="img/Sticker/skov.jpg" class="img-pop-up">
-                            <div class="single-gallery-image" style="background: url(img/Sticker/skov.jpg);"></div>
+                        <a href="img/Acryllicbending/bord.jpg" class="img-pop-up">
+                            <div class="single-gallery-image" style="background: url(img/Acryllicbending/bord.jpg);"></div>
                         </a>
                     </div>
                     <div class="col-md-4">
-                        <a href="img/Sticker/alien.jpg" class="img-pop-up">
-                            <div class="single-gallery-image" style="background: url(img/Sticker/alien.jpg);"></div>
+                        <a href="img/Acryllicbending/avisholder.jpg" class="img-pop-up">
+                            <div class="single-gallery-image" style="background: url(img/Acryllicbending/avisholder.jpg);"></div>
                         </a>
                     </div>
                 </div>
