--- a/machinePage_Textile.html
+++ b/machinePage_Textile.html
@@ -97,6 +97,7 @@
         </section>
 
         <!-- VIDEO -->
+ <!--
         <section class="about-area  pb-30">
             <div class="container">
                 <div class="row align-items-center justify-content-between">
@@ -139,7 +140,7 @@
 
                         <div class="desc">
                             <br>
-                            <a class="text-uppercase view-details" href="https://kea-makerlab.github.io/hello/assets/TEMPLATE_skabelon.ait.ai">Download</a>
+                            <a class="text-uppercase view-details" href="https://kea-makerlab.github.io/hello/assets/allefarverCMYK.tiff">Download</a>
                             <h2 class="text-uppercase">CMYK Color Tempate</h2>
 
                             <p>
@@ -155,7 +156,7 @@
 
                         <div class="desc">
                             <br>
-                            <a class="text-uppercase view-details" href="https://kea-makerlab.github.io/hello/tutorials/laserCutter/Punktlektion%20lasersk%C3%A6re%20V.3.pdf">Download</a>
+                            <a class="text-uppercase view-details" href="https://kea-makerlab.github.io/hello/tutorials/textilePrinter/Punktlektion_MimakiTextileprinter_ENG.pdf">Download</a>
                             <h2 class="text-uppercase">Step By Step Guide PDF</h2>
                             <p>
                                 Follow this detailed step by step guide to go from loading of fabric, to file setup, to print.
