--- a/kea_store.html
+++ b/kea_store.html
@@ -190,13 +190,13 @@
                         <br>Guldbergsgade 29N, P0</p>
                     <ul class="list-unstyled">
                         <li><i class="fa fa-phone fa-fw"></i> +45 46 46 03 90</li>
-                        <li><i class="fa fa-envelope-o fa-fw"></i> <a href="mailto:makerlab@kea.dk">makerlab@kea.dk</a>
+                        <li><i class="fa fa-envelope-o fa-fw"></i> <a href="mailto:popupandstore@kea.dk">popupandstore@kea.dk</a>
                         </li>
                     </ul>
                     <br>
                     <p> <b>OPENING TIME:</b></p>
                         <ul class="list-unstyled">
-                            <li> <font  color="red"><i class="fa fa-asterisk" aria-hidden="true"></i> <b>Closed for summer! Open 26 Aug.</b> </font></li>
+                            <li> <font  color="red"><i class="fa fa-asterisk" aria-hidden="true"></i> <b>COVID-19 Closed.</b> </font></li>
                             <li><i class="fa fa-clock-o fa-fw"></i> <b>Mon-Fri:</b> kl:  14-16</li>
                             
                         </ul>
