--- a/store_exhibit.html
+++ b/store_exhibit.html
@@ -13,7 +13,7 @@
 <p>The exhibit space exists for YOU.</p>
 <p>If you or a group is dreaming of getting an idea, art work, product, or smart solutions out there - we have a space for you to get started.</p>
 <p>We’ll work with you to set up the space so that people can view and even purchase your work.</p>
-<p>Send us an email at <a href="mailto:makerlab@kea.dk">makerlab@kea.dk</a> or come in and talk to us :]</p>
+<p>Send us an email at <a href="mailto:popupandstore@kea.dk">popupandstore@kea.dk</a> or come in and talk to us :]</p>
 </div>
 </body>
 
