added access note to booking page

--- a/booking.html
+++ b/booking.html
@@ -88,10 +88,15 @@
 
                     <hr class="small">
 
-                    <font size="3" color="red">If you are booking from a mobile platform, you need to install <b> Google Sheet APP</b> to be able to edit!!</font>
+                    <font size="3" color="blue">If you are booking from a mobile platform, you need to install <b> Google Sheet APP</b> to be able to edit!!</font>
+                    <br>
+                    <font size="3" color="blue">Your e-mail will be stored in the system up to 8 months before permanently deleted. </font>
                     <br>
                     <br>
-                    <font size="3" color="red">Your e-mail will be stored in the system up to 8 months before permanently deleted. </font>
+                    <br>
+                    <font size="7" color="red">WHO GET ACCESS? </font>
+                    <br>
+                    <font size="5" color="red">Only students working on their final exam project and have been approved by their teacher have access to Makerlab! </font>
                     <br>
                     <br>
                     <br>
