--- a/booking.html
+++ b/booking.html
@@ -96,7 +96,7 @@
                     <br>
                     <font size="7" color="red">WHO GET ACCESS? </font>
                     <br>
-                    <font size="5" color="red">Only students working on their final exam project and have been approved by their teacher have access to Makerlab! </font>
+                    <font size="5" color="red">Only students who are working on their final exam projects, and have been approved by their teacher, have access to Makerlab! </font>
                     <br>
                     <br>
                     <br>
