Relinked to new tutorial roter table

--- a/tutorial.html
+++ b/tutorial.html
@@ -614,9 +614,9 @@
 
                         <div class="col-sm-2">
                             <div class="portfolio-item">
-                                <a href="https://www.youtube.com/watch?v=bdZac0EbD9k">
+                                <a href="https://youtu.be/xgL3mxKolhM?t=19">
                                     <img class="img-portfolio img-responsive" src="img/tutorial/woodWorkshop.png">
-                                    <p>Router Table</p>
+                                    <p>Festool Router Table</p>
 
                                 </a>
                             </div>
