--- a/booking.html
+++ b/booking.html
@@ -96,7 +96,7 @@
                     <br>
                     <font size="7" color="red">WHO GET ACCESS? </font>
                     <br>
-                    <font size="5" color="red">Only students who are working on their final exam projects, and have been approved by their teacher, have access to Makerlab! <a href="./assets/Makerlab_COVID-19_Protocol.pdf">Read More.</a> </font>
+                    <font size="5" color="red">You need to book a machine or a worktabel to get access to Makerlab! <a href="./assets/COVID Protocol-v2.pdf">Read More.</a> </font>
                     <br>
                     <br>
                     <br>
