Updated Booking and cnc tool library

--- a/booking.html
+++ b/booking.html
@@ -147,6 +147,15 @@
                                 </a>
                             </div>
                         </div>
+                        
+                        <!-- Screen Print-->
+                        <div class="col-sm-4">
+                            <div class="portfolio-item">
+                                <a href="https://docs.google.com/spreadsheets/d/1Aqs9MEDGPj4nmeMR-YIPszjCztyUnDReZsQwSxz_3DY/edit#gid=1870025087">
+                                    <img class="img-portfolio img-responsive" src="img/COVID_ScreenPrint_Booking.png">
+                                </a>
+                            </div>
+                        </div>
                                                                                                                   
                     </div>
                     <h2>Worktables:</h2>
