--- a/machinePage_CNC.html
+++ b/machinePage_CNC.html
@@ -263,7 +263,7 @@
                         <img class="d-block mx-auto img-fluid" src="img/downloadTemplateFile.png" alt="">
                         <div class="desc">
                             <br>
-                            <a class="text-uppercase view-details" href="./assets/Fusion360_ToolLibrary%20.zip">Download</a>
+                            <a class="text-uppercase view-details" href="./assets/Makerlab_Fusion360_ToolLib_v2.zip">Download</a>
                             <h2 class="text-uppercase">Tool Library</h2>
                             <p>Download and install on your own Fusion 360 Cloud account. These are digital twins of all the tools we have in Makerlab. Use them in your setup for safe cutting. Feeds and speeds have been saved on the tool. <br> <br><a href="./tutorials/LoadToolsFusion360.html">
                                     <i>(Show me how)</i>
