--- a/machinePage_Tshirt.html
+++ b/machinePage_Tshirt.html
@@ -215,9 +215,9 @@
                         <img class="d-block mx-auto img-fluid" src="img/downloadSoftware.png" alt="">
                         <div class="desc">
                             <br>
-                            <a class="text-uppercase view-details" href="https://epson.com/Support/Printers/Single-Function-Inkjet-Printers/SureColor-Series/Epson-SureColor-F2000/s/SPT_SCF2000SE">Download</a>
+                            <a class="text-uppercase view-details" href="https://www.epson.eu/products/printers/large-format-printers/surecolor-sc-f2000-5c/Support-Downloads">Download</a>
                             <h2 class="text-uppercase">Print Software </h2>
-                            <p>Under the Utility tab download and install Epson Garment Creator v2.0.2 on your own machine. You wont connect to the printer but you can set up your file from home and just open and print in Makerlab .</p>
+                            <p>Under Other Software tab download and install Epson Garment Creator v2.0.3 on your own machine. You wont connect to the printer but you can set up your file from home and just open and print in Makerlab .</p>
                             
                         </div>
                     </div>
