Fixd broken link CNC Page

--- a/machinePage_CNC.html
+++ b/machinePage_CNC.html
@@ -278,7 +278,8 @@
                         <img class="d-block mx-auto img-fluid" src="img/downloadTemplateFile.png" alt="">
                         <div class="desc">
                             <br>
-                            <a class="text-uppercase view-details" href="href=./assets/Flexicam%20Viper%20in%20Makerlab_V7.cps">Download</a>
+                            <a class="text-uppercase view-details" href=./assets/Flexicam%20Viper%20in%20Makerlab_V7.cps>Download</a>
+                        
                             <h2 class="text-uppercase">Post processor v7</h2>
                             <p><i class="fa fa-asterisk" aria-hidden="true"></i> <b>IMPORTANT UPDATE!</b><br> Aug. 2020<br><br>
                             Post processor for Fusion 360. Converts your toolpath in Fusion 360 to a file format the CNC can read.<br>
@@ -309,6 +310,7 @@
                     
                 </div>
             </div>
+                </div>
         </section>
         <!-- End secvice Area -->
 
