Fixed broken Link

--- a/machinePage_CNC.html
+++ b/machinePage_CNC.html
@@ -189,7 +189,7 @@
 
                         
 
-                        <a class=" view-details" href="hhttps://autode.sk/2UTqlTV">CNC-Tutorial - 2D CONTOUR</a>
+                        <a class=" view-details" href="https://autode.sk/2UTqlTV">CNC-Tutorial - 2D CONTOUR</a>
 
                         <a class=" view-details" href="https://autode.sk/2zqBBiS">CNC-Tutorial - 2D POCKET</a>
 
